# Proyecto_ADA

./: CMakeCache.txt  CMakeLists.txt  Makefile  Memorizado.cpp  Proyecto_ADA  README.md  Recursivo.cpp  Voraz.cpp  a.out  cmake_install.cmake  main.cpp  output.avi
Min-Matching/: Dinamico.cpp  Dinamico_2.cpp  Dinamico_Promedio.cpp  Memorizado.cpp  Memorizado_2.cpp  Recursivo_2.cpp  Voraz.cpp
Min-Transformacion/: Animacion-IMG.cpp  Animacion-IMG_Dinamico.cpp  Animacion-IMG_Dinamico_Promedio.cpp  Animacion-IMG_Voraz.cpp  Animacion-IMG_copy.cpp  Coloracion.cpp  Dinamico.cpp  Dinamico_Promedio.cpp  Lectura-IMG.cpp  Voraz.cpp
